<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="25dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plec" />

    <Spinner
        android:id="@+id/wyborPlec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/plec_opcje" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masa_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/wskazowka_masa"
        android:maxLines="1"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:id="@+id/masa"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wzrost_txt"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/wskazowka_wzrost"
        android:maxLines="1"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:id="@+id/wzrost"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcje_wzrostu_txt"
        />

    <Spinner
        android:id="@+id/opcjaObliczen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/wzrost_opcje"></Spinner>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wiek" />

    <EditText
        android:id="@+id/wiek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/wiekWskazowka"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/przycisk_oblicz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/przycisk_txt" />

    <TextView
        android:id="@+id/PPMWynik"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:text="" />




</LinearLayout>